--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://musing-brattain-4d73b7.netlify.com/"
 languageCode = "en-us"
-title = "A Hugo website"
+title = "A Test Hugo website"
 theme = "hugo-lithium"
 googleAnalytics = ""
 disqusShortname = ""
@@ -14,10 +14,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     url = "/about/"
 [[menu.main]]
     name = "GitHub"
-    url = "https://github.com/rstudio/blogdown"
+    url = "https://github.com/jonathanmoscovici"
 [[menu.main]]
     name = "Twitter"
-    url = "https://twitter.com/rstudio"
+    url = "https://twitter.com/moscostats"
 
 [params]
     description = "A website built through Hugo and blogdown."
@@ -34,6 +34,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     # path to the favicon, under "static"
     favicon = "favicon.ico"
 
+    #edit logo in themes\hugo-lithium\static\images
     [params.logo]
     url = "logo.png"
     width = 50
